# trading_algos

./: .gitignore  README.md  pyproject.toml
.cline-batch-plans/: 001_bootstrap-repository-from-starter-pack.plan.md
.clinerules/: python-venv.md
docs/: algorithm_authoring_guide.md  algorithm_catalog_db_backed_build_plan.md  algorithm_catalog_phase2_followup_plan.md  algorithm_library_coder_prompts_27.md  algorithm_library_coder_prompts_27_simple.md  algorithm_library_coder_prompts_realistic_60.md  algorithm_library_coder_prompts_realistic_60_simple.md  algorithm_library_implementation_tracker.md  algorithm_library_implementation_tracker_initial.md  algorithm_library_implementation_tracker_template.md  algorithm_library_remaining_readiness_requirements.md  algorithm_library_requirements.html  algorithm_library_requirements.md  algorithm_library_requirements_enriched.html  algorithm_library_requirements_enriched.md  algorithm_library_requirements_enriched_v2.html  algorithm_library_requirements_enriched_v2.md  algorithm_library_requirements_v4.md  algorithm_library_systematic_implementation_plan.html  algorithm_library_systematic_implementation_plan.md  algorithm_library_systematic_implementation_plan_v2.md  algorithm_reporting_and_evaluation_requirements.md  dashboard_configuration_builder_ui_plan.md  experiment_parallel_execution_plan.md  legacy_algorithm_to_new_library_mapping.md  smarttrade_algorithm_implementation_plan.md  smarttrade_algorithm_requirements.html  smarttrade_algorithm_requirements.md
manifests/: algorithm_framework_blockers.yaml  (+3 more)
(+532 files in other folders)
