[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "trading-algos"
version = "0.1.0"
description = "Alert generation and decision-making algorithms for smarttrade"
readme = "README.md"
requires-python = ">=3.11"
dependencies = ["flask>=3.0", "pymongo>=4.6"]

[tool.setuptools]
package-dir = {"" = "src"}
include-package-data = true

[tool.setuptools.packages.find]
where = ["src"]

[tool.setuptools.package-data]
trading_algos = ["py.typed"]

[tool.mypy]
exclude = ["^build/"]

[[tool.mypy.overrides]]
module = ["scipy", "scipy.*"]
ignore_missing_imports = true

[[tool.mypy.overrides]]
module = ["utils_shared", "utils_shared.*"]
ignore_missing_imports = true

[tool.pytest.ini_options]
pythonpath = ["src"]